# http-toolkit-patcher

./: .gitignore  Cargo.toml  app.html  build.rs  bytes.txt  readme.md
src/: logger.rs  main.rs
ui/: app_window.slint
