[package]
name = "http-toolkit-patcher"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.14.1", features = ["backend-qt"] }
rfd = "0.14"
native-dialog = "0.9.4"
whoami = "1.6.1"
asar = "0.3.0"

[build-dependencies]
slint-build = "1.14.1"
