[package]
name = "http-toolkit-patcher"
version = "1.24.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
rfd = "0.14"
whoami = "1.6.1"
asar = { version = "0.3.0", features = ["integrity"] }
walkdir = "2"
sha2 = "0.10.9"
libc = "0.2.178"
chrono = "0.4.42"
env = "1.0.1"
